# mymasterproject

./: README.md  tatus
docs/: nav_benchmark_results.csv
launch/: newcar_all.launch.py
mymasterproject/: actor_robot_tf_broadcaster.py
src/actor_pose_ros2/: CMakeLists.txt
src/actor_pose_ros2/src/: model_waypoint_mover.cpp
src/maze/: .gitignore  A*final.py  A*vis.py  buildmaze.py  maze  maze.yaml  maze_model.sdf  maze_modelfortest.sdf  maze_robot  maze_world.sdf  pathplanAstarwithexpandwall.py  pathplanRRTandAstar.py  plotpath.py  runslovemaze.py
src/maze/robot/: buildingrobot.sdf  keepingcode  sensor_tutorial.sdf
src/maze/worlds/: maze_car_keyok.sdf
src/mymasterproject/: CMakeLists.txt  setup.py
src/mymasterproject/launch/: newcar_launch.py
src/mymasterproject/maps/: map.yaml
src/mymasterproject/mymasterproject/: localization_stack.launch.py
src/mymasterproject/scripts/: actor_safety_node.py  amcl.yaml  carodom_relay.py  check_topics.py  dwa_local_planner.py  generated_pedestrians.sdf  ground_truth_to_tf.py  ground_truth_viz.py  gz_ground_truth.py  local_costmap_generator.py  nav_benchmark.py  nav_benchmark_multi.py  odom_to_tf.py  planner_keyboard_control.py  planner_node.py  robot_pose_node.py  simple_inflation_costmap.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/algorithm/: debug.py  driving_test.py  parallel_parking.py  parking_spot_detection.py
src/robot_description/config/: controllers.yaml  ekf.yaml  gz_bridge.yaml  twist_mux.yaml
src/robot_description/description/: building_robot.urdf.xacro  building_robot.xacro  cameras.xacro  gazebo_control.xacro  inertia_macros.xacro  lidar.xacro  new_car.xacro  new_car_master.urdf.xacro  ros2_control_ackerman.xacro
src/robot_description/launch/: gazebo_display.launch.py  (+5 more)
(+28 files in other folders)
